# work-planner

./: .env.example  .gitignore  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  settings.gradle.kts  start-all.sh
ai-poller/: .env.example  ALGO_COMPANY_V1.md  ALGO_DND_V2.md  ALGO_DSL_V1.md  ALGO_SDLC_SPEC.md  ARCHITECTURE.md  DESIGN.md  README.md  algo_decompose.py  algo_decompose_v2.py  algo_orchestrated.py  algo_sdlc.py  algo_simple_answer.py  algo_tools.py  algorithm.py  api_client.py  archivist_handler.py  archivist_prompt.py  chat_handler.py  chat_prompt.py  config.py  debate.py  drive_client.py  encryption.py  google_auth.py  hierarchy.py  knowledge.py  main.py  models.py  persona_registry.py  processor.py  requirements.txt  spawner.py  task_tools.py  test_algo_decompose_v2.py  test_algo_sdlc.py  test_archivist_handler.py  test_chat_handler.py  test_chat_prompt.py  test_persona_registry.py  (+3 more)
app/: build.gradle.kts
backend/: .env.example  Dockerfile  go.mod  go.sum
chromadb/: Dockerfile
claude-proxy/: README.md  algo_server.py  api_client.py  proxy.py  pyproject.toml  test_algo_server.py  test_delete_task.py  test_proxy.py  workplanner_server.py
cli/: README.md  pyproject.toml
cli/src/workplanner_cli/: __main__.py  api.py  cli.py  config.py  render.py
cli/tests/: test_knowledge.py
docs/: CHAT_DESIGN.md  DRIVER_DESIGN.md  KNOWLEDGE_CARDS_DESIGN.md  KNOWLEDGE_CARDS_TASKS.md  WORK_ITEMS_DESIGN.md
gradle/: libs.versions.toml
mobile/: .env.example  .gitignore  README.md  SETUP_SUMMARY.md  app.json  package-lock.json  package.json  (+1 more)
(+215 files in other folders)
