[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workplanner-cli"
version = "0.1.0"
description = "Command-line interface for WorkPlanner — talks to the backend's internal API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shravan Kumar Sundar" }]
dependencies = [
  "click>=8.1",
  "httpx>=0.27",
  "rich>=13.7",
  "tomli-w>=1.0",
]

[project.scripts]
wp = "workplanner_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/workplanner_cli"]
